# chessEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  chess  cmake_install.cmake
src/: AI.cpp  AI.h  BitboardHandler.cpp  BitboardHandler.h  Chess.cpp  Chess.h  ChessStack.cpp  ChessStack.h  Interacter.cpp  Interacter.h  Logger.h  defs.h  main.cpp
src/Pieces/: Bishop.cpp  Bishop.h  ChessPiece.cpp  ChessPiece.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  SlidingPiece.cpp
